# socializer

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  Requirements.md  close_template.txt  config.py  config.yaml  contacts.py  family_template.txt  genderapi_cache.sqlite  main.py  main_gender_classification.py  main_get_contacts.py  main_get_people.py  main_template.py  mkdocs.yml  netlify.toml  notes.md  plan.todo  pyproject.toml  send_messages.py  template.txt
docs/: cli.md  how-it-works.md  index.md  roadmap.md  setup.md
docs_src/message_template/: contacts.csv  contacts.md  messages.csv  messages.md  render.sh  template.txt
scripts/: generate_markdown_tables.sh
socializer/: __init__.py  errors.py  google_contacts_manager.py  models.py  name_translator.py  services.py  whatsapp_manager.py
socializer/cli/: campaign.py  main.py  utils.py
socializer/data_augmentation/: __init__.py  gender_classifier.py
socializer/google_contacts/: __init__.py  adapter.py  errors.py  manager.py  models.py
templates/eid_adha/: close_template.mako  template.mako
templates/eid_fetr/: close_template.mako  family_template.mako  template.mako
templates/ramadan/: close_template.mako  family_template.mako  template.mako
tests/: test_google_contacts_manager.py  test_template.py
tests/google_contacts/: test_google_contacts_manager.py  test_google_person.py
tests/services/: test_contact_management.py
