[tool.poetry]
name = "socializer"
version = "0.1.0"
description = ""
authors = ["Amr Awad"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
google-api-python-client = "^2.2.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.4"
dataclass-csv = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
